--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,8 @@
+:root{
+    --input-linear: linear-gradient(120deg, #474747, #5980d3);
+    --buttton-linear: linear-gradient(120deg, #474747, #5980d3,  #474747);
+}
+
 body{
     padding: 0;
     margin: 0;
@@ -6,7 +11,7 @@ body{
 
 .login{
     height: 100vh;
-    background: linear-gradient(120deg, #474747, #5980d3);
+    background: var(--input-linear);
     display: flex;
     justify-content: center;
     align-items: center;
@@ -61,15 +66,19 @@ body{
     height: 1px;
     width: 0;
     margin-bottom: 16px;
-    background: linear-gradient(120deg, #474747, #5980d3);
+    background: var(--input-linear);
     transition: .3s ease-in-out;
+}
+
+.login-input:focus + .login-input-border::after{
+    width: 100%;
 }
 
 .login-submit{
     height: 48px;
     width: 100%;
     outline: none;
-    background:linear-gradient(120deg, #474747, #5980d3,  #474747);
+    background: var(--buttton-linear);
     background-size: 200%;
     margin-top: 32px;
     color: white;
@@ -79,6 +88,10 @@ body{
     border-radius: 4px;
     cursor: pointer;
     transition: .5s ease-in-out;
+}
+
+.login-submit:hover{
+    background-position: right;
 }
 
 .login-reset{
